Mensaje del commit

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,19 +5,20 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.1
+  sdk: ">=3.5.1 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^2.3.2
   cupertino_icons: ^1.0.8
   firebase_core: ^3.7.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^4.0.0
-flutter:
 
+flutter:
   uses-material-design: true
