--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   google_fonts: ^2.3.2
   cupertino_icons: ^1.0.8
   firebase_core: ^3.7.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
 
 
 dev_dependencies:
